test/errors/compare_signed_unsigned.luv
# RET: 1
# ERR: {self}:7:13:    if sign < unsign:
# ERR: {ssss}                  ^ error: Comparison with different signs: i64 and u64.
def int main():
    i64 sign = -55
    u64 unsign = 123
    if sign < unsign:
        print "oops"
    return 0
